force-app/main/default/objects/ExternalAthleteData__c/ExternalAthleteData__c.object-meta.xml
<CustomObject>
    <description>Data point harmonisé issu d'une source externe pour un athlete.</description>
    <label>External Athlete Data</label>
    <nameField>
        <label>External Athlete Data Name</label>
        <type>AutoNumber</type>
        <displayFormat>EAD-{000000}</displayFormat>
    </nameField>
    <pluralLabel>External Athlete Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>