force-app/main/default/objects/ExternalAthleteData__c/fields/DataSource__c.field-meta.xml
<CustomField>
    <fullName>DataSource__c</fullName>
    <label>Data Source</label>
    <referenceTo>DataSource__c</referenceTo>
    <relationshipLabel>Athlete Data Points</relationshipLabel>
    <relationshipName>AthleteDataPoints</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>