force-app/main/default/objects/ExternalAthleteData__c/fields/MetricName__c.field-meta.xml
<CustomField>
    <fullName>MetricName__c</fullName>
    <label>Metric Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>