force-app/main/default/objects/ExternalAthleteData__c/fields/RawPayload__c.field-meta.xml
<CustomField>
    <description>Payload brut (JSON texte) pour audit/debug ingestion.</description>
    <fullName>RawPayload__c</fullName>
    <label>Raw Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>